--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <h1>Check the console</h1>
-    <script type="text/Javascript" src="./main.js"></script>
+    <script type="text/Javascript" src="./assets/js/fortune-teller.js"></script>
+    <script type="text/Javascript" src="./assets/js/lifetime-supply-calculator.js"></script>
+    <script type="text/Javascript" src="./assets/js/puppy-age-calculator.js"></script>
 </body>
 
 </html>
