add even odd Reporter

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <h1>Check the console</h1>
     <script type="text/Javascript" src="./main.js"></script>
+    <script type="text/Javascript" src="./even-odd-reporter.js"></script>
+    <script type="text/Javascript" src="./multiplication-tables.js"></script>
+    <script type="text/Javascript" src="./grade-assigner.js"></script>
 </body>
 
 </html>
