--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <h1>Check the console</h1>
     <script type="text/Javascript" src="./main.js"></script>
-    <script type="text/Javascript" src="./even-odd-reporter.js"></script>
-    <script type="text/Javascript" src="./multiplication-tables.js"></script>
-    <script type="text/Javascript" src="./grade-assigner.js"></script>
+    <!-- <script type="text/Javascript" src="./assets/js/even-odd-reporter.js"></script> -->
+    <script type="text/Javascript" src="./assets/js/multiplication-tables.js"></script>
+    <script type="text/Javascript" src="./assets/js/grade-assigner.js"></script>
 </body>
 
 </html>
