added grade assigner

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Check the console</h1>
     <script type="text/Javascript" src="./main.js"></script>
     <!-- <script type="text/Javascript" src="./assets/js/even-odd-reporter.js"></script> -->
-    <script type="text/Javascript" src="./assets/js/multiplication-tables.js"></script>
+    <!-- <script type="text/Javascript" src="./assets/js/multiplication-tables.js"></script> -->
     <script type="text/Javascript" src="./assets/js/grade-assigner.js"></script>
 </body>
 
