--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <h1>Check the console</h1>
     <script type="text/Javascript" src="./main.js"></script>
+    <script type="text/Javascript" src="./assets/js/loops.js"></script>
+    <script type="text/Javascript" src="./assets/js/arraymethods.js"></script>
 </body>
 
 </html>
